--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,180 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=conda_forge
-_openmp_mutex=4.5=2_gnu
-bullet-cpp=3.25=h53bb729_2
-bzip2=1.0.8=hd590300_5
-ca-certificates=2024.2.2=hbcca054_0
-cloudpickle=3.0.0=pyhd8ed1ab_0
-gym=0.26.1=py38h6f1a3b6_0
-gym-notices=0.0.8=pyhd8ed1ab_0
-importlib-metadata=7.0.1=pyha770c72_0
-importlib_metadata=7.0.1=hd8ed1ab_0
-ld_impl_linux-64=2.40=h41732ed_0
-libblas=3.9.0=21_linux64_openblas
-libcblas=3.9.0=21_linux64_openblas
-libffi=3.4.2=h7f98852_5
-libgcc-ng=13.2.0=h807b86a_5
-libgfortran-ng=13.2.0=h69a702a_5
-libgfortran5=13.2.0=ha4646dd_5
-libgomp=13.2.0=h807b86a_5
-liblapack=3.9.0=21_linux64_openblas
-libnsl=2.0.1=hd590300_0
-libopenblas=0.3.26=pthreads_h413a1c8_0
-libsqlite=3.45.1=h2797004_0
-libstdcxx-ng=13.2.0=h7e041cc_5
-libuuid=2.38.1=h0b41bf4_0
-libxcb=1.15=h0b41bf4_0
-libxcrypt=4.4.36=hd590300_1
-libzlib=1.2.13=hd590300_5
-ncurses=6.4=h59595ed_2
-numpy=1.24.4=py38h59b608b_0
-openssl=3.2.1=hd590300_0
-pip=24.0=pyhd8ed1ab_0
-pthread-stubs=0.4=h36c2ea0_1001
-pybullet=3.25=py38h53bb729_2
-python=3.8.18=hd12c33a_1_cpython
-python_abi=3.8=4_cp38
-readline=8.2=h8228510_1
-roboverse=0.0.0=dev_0
-setuptools=69.0.3=pyhd8ed1ab_0
-tk=8.6.13=noxft_h4845f30_101
-wheel=0.42.0=pyhd8ed1ab_0
-xorg-kbproto=1.0.7=h7f98852_1002
-xorg-libx11=1.8.7=h8ee46fc_0
-xorg-libxau=1.0.11=hd590300_0
-xorg-libxdmcp=1.1.3=h7f98852_0
-xorg-libxext=1.3.4=h0b41bf4_2
-xorg-xextproto=7.3.0=h0b41bf4_1003
-xorg-xproto=7.0.31=h7f98852_1007
-xz=5.2.6=h166bdaf_0
-zipp=3.17.0=pyhd8ed1ab_0
+absl-py==2.1.0
+ale-py==0.8.1
+anyio==4.3.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+asttokens==2.4.1
+astunparse==1.6.3
+async-lru==2.0.4
+attrs==23.2.0
+Babel==2.14.0
+backcall==0.2.0
+beautifulsoup4==4.12.3
+bleach==6.1.0
+cachetools==5.3.3
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+cloudpickle==3.0.0
+comm==0.2.1
+contourpy==1.1.1
+cycler==0.12.1
+debugpy==1.8.1
+decorator==5.1.1
+defusedxml==0.7.1
+docopt==0.6.2
+exceptiongroup==1.2.0
+executing==2.0.1
+Farama-Notifications==0.0.4
+fastjsonschema==2.19.1
+filelock==3.13.1
+flatbuffers==24.3.7
+fonttools==4.49.0
+fsspec==2024.2.0
+gast==0.4.0
+gdown==5.1.0
+github-clone==1.2.0
+google-auth==2.28.2
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+grpcio==1.62.1
+gtimer==1.0.0b5
+gym==0.26.1
+gym-notices==0.0.8
+gymnasium==0.29.1
+h11==0.14.0
+h5py==3.10.0
+httpcore==1.0.4
+httpx==0.27.0
+idna==3.6
+importlib-metadata==7.0.1
+importlib_resources==6.1.3
+ipdb==0.13.13
+ipykernel==6.29.3
+ipython==8.12.2
+ipywidgets==8.1.2
+jedi==0.19.1
+Jinja2==3.1.3
+joblib==1.3.2
+json5==0.9.24
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+jupyter-events==0.10.0
+jupyter-lsp==2.2.4
+jupyter_client==8.6.0
+jupyter_core==5.7.1
+jupyter_server==2.13.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.1.5
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.25.4
+jupyterlab_widgets==3.0.10
+keras==2.13.1
+kiwisolver==1.4.5
+libclang==16.0.6
+lz4==4.3.3
+Markdown==3.5.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.7.5
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mistune==3.0.2
+mpmath==1.3.0
+nbclient==0.10.0
+nbconvert==7.16.3
+nbformat==5.10.3
+nest-asyncio==1.6.0
+networkx==3.1
+notebook==7.1.2
+notebook_shim==0.2.4
+numpy==1.24.3
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.19.3
+nvidia-nvjitlink-cu12==12.4.99
+nvidia-nvtx-cu12==12.1.105
+oauthlib==3.2.2
+opencv-python==4.9.0.80
+opt-einsum==3.3.0
+overrides==7.7.0
+packaging==24.0
+pandas==2.0.3
+pandocfilters==1.5.1
+parso==0.8.3
+pexpect==4.9.0
+pickleshare==0.7.5
+pillow==10.2.0
+pkg_resources==0.0.0
+pkgutil_resolve_name==1.3.10
+platformdirs==4.2.0
+prometheus_client==0.20.0
+prompt-toolkit==3.0.42
+protobuf==4.25.3
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pybullet==3.2.5
+pycparser==2.21
+pygame==2.1.0
+Pygments==2.17.2
+pyparsing==3.1.2
+PySocks==1.7.1
+python-dateutil==2.9.0
+python-json-logger==2.0.7
+pytz==2024.1
+PyYAML==6.0.1
+pyzmq==25.1.2
+referencing==0.34.0
+requests==2.31.0
+requests-oauthlib==1.4.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.7.1
+-e git+https://github.com/avisingh599/cog.git@98252e10db8bfe38ea091835f242a3d142388feb#egg=rlkit
+-e git+https://github.com/montrealrobotics/roboverse.git@c3fe01c12e2592178cbc294a28e692d98857d47a#egg=roboverse
+rpds-py==0.18.0
+rsa==4.9
+sb3-contrib==2.2.1
+scikit-video==1.1.11
+scipy==1.10.1
+Send2Trash==1.8.2
+Shimmy==1.3.0
+six==1.16.0
+sniffio==1.3.1
+soupsieve==2.5
+stable-baselines3==2.2.1
+stack-data==0.6.2
+sympy==1.12
+tensorboard==2.13.0
+tensorboard-data-server==0.7.2
+tensorflow-estimator==2.13.0
+tensorflow-io-gcs-filesystem==0.34.0
+termcolor==2.4.0
+terminado==0.18.1
+tinycss2==1.2.1
+tomli==2.0.1
+torch==2.2.1
+tornado==6.4
+tqdm==4.66.2
+traitlets==5.14.1
+triton==2.2.0
+typing_extensions==4.10.0
+tzdata==2024.1
+urllib3==2.2.1
+wcwidth==0.2.13
+webencodings==0.5.1
+websocket-client==1.7.0
+Werkzeug==3.0.1
+widgetsnbextension==4.0.10
+wrapt==1.16.0
+zipp==3.17.0
